# FileIO

./: CMakeLists.txt
headers/: FileIO.h  TextTypes.h
src/: FileIO.cpp
